--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.username=social-media-user
 spring.datasource.password=dummypassword
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.security.user.name=Dhiraj
+spring.security.user.password=Dhi@123#raj
