implemented spring security configuration for basic authentication

--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -12,5 +12,5 @@ spring.datasource.password=dummypassword
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.security.user.name=Dhiraj
+spring.security.user.name=Dhirajapp
 spring.security.user.password=Dhi@123#raj
